fix: refactor icons card and button (#15)
* fix bugs in icon

* change stale svg components in button

* edit stories

* fix bugs and change paddings

* add disbale syles, wrap every decl inside where

* change fluid padding to fixed

* reorder properties in css

* wrap children inside span

* add two new stories for disabled and oveflow

* remove stale svg component file

* change stale svg components to icon

* extract overflowing text

* handle overflowing tag in card

* remove unneeded story

* run format

--- a/src/components/vendor-card.css
+++ b/src/components/vendor-card.css
@@ -24,6 +24,7 @@
 
 :where(.vendor-card ._name) {
   padding-block-start: var(--length-32);
+  padding-inline: var(--length-32);
   margin-block-end: var(--length-8);
   text-align: center;
   font-size: var(--length-18);
@@ -123,8 +124,14 @@
   margin-block-end: var(--length-12);
   font-size: var(--length-12);
   color: var(--color-faded);
+  padding-inline: var(--length-32);
   order: 2;
   word-break: break-all;
+}
+
+:where(.vendor-card ._categories) {
+  display: inline-block;
+  padding-inline: var(--length-24);
 }
 
 :where(.vendor-card ._delivery) {
